--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Little Goat</string>
     <string name="apikey">7kM7IGFvtiq+UzgdfT8umA==</string>
     <string name="urlbase">https://fakevout.azurewebsites.net</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
